# opengl-renderer

./: CMakeLists.txt  README.md
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
shaders/: frag-light.glsl  frag.glsl  vert.glsl
src/: camera.c  camera.h  defines.h  main.c  mem.c  mem.h  model.c  model.h  shader.c  shader.h  utils.c  utils.h  window.c  window.h
